# pathfinder

./: .gitignore  .rustfmt.toml  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  demo-config.yaml  example-config.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml
.devcontainer/mosquitto/config/: mosquitto.conf
.devcontainer/mosquitto/config/certs/: broker.crt  broker.key  ca.crt
.devcontainer/mosquitto/config/clients/: example_user.crt  example_user.csr  example_user.key
.github/workflows/: lint.yaml  publish-binaries.yaml  unit-test.yaml
src/: cli.rs  main.rs
src/adapters/: mod.rs
src/adapters/data_serde/: json.rs  mod.rs  protobuf.rs
src/adapters/graphos_client/: mod.rs
src/adapters/graphos_client/apollo/: mod.rs  requests.rs
src/adapters/graphos_client/apollo/schema/: publish_subgraph_mutation.graphql  schema.graphql
src/adapters/kv_store/: in_memory.rs  mod.rs  redis.rs
src/adapters/message_consumer/: kafka.rs  mod.rs
src/adapters/router/: http_client.rs  mod.rs
src/adapters/router_client/: http.rs  in_memory.rs  mod.rs
src/commands/: export_schema.rs  listen.rs  mod.rs  publish_schema.rs
src/configuration/: mod.rs
src/graphql/: mod.rs  query.rs  schema.rs  subscription_operation.rs
src/health/: mod.rs
src/listener/: message_processor.rs  mod.rs  router_endpoint.rs  subscription.rs  subscription_store.rs  topic.rs
src/message_consumer/: mod.rs
src/ports/: data_serde.rs  graphos_client.rs  kv_store.rs  mod.rs  router_client.rs
src/router/: client.rs  endpoint.rs  mod.rs
src/serde/: json.rs  mod.rs
src/tracing_guard/: mod.rs
